--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -218,6 +218,14 @@ android {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
+        release{
+            if(project.hasProperty('MYAPP_RELEASE_STORE_FILE')){
+                storeFile file('my-release-key.keystore')
+                storePassword '123456'
+                keyAlias 'my-key-alias'
+                keyPassword '123456'
+            }
+        }
     }
     buildTypes {
         debug {
@@ -229,6 +237,7 @@ android {
             signingConfig signingConfigs.debug
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+            signingConfig signingConfigs.release
         }
     }
 
